add pdf to cover all possible parameterization conversions

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,19 @@ Validations/
 
 
 
+###############
+# Other files #
+###############
+*.aux
+*.log
+*.nav
+*.out
+*.snm
+*.backup
+*.toc
+
+
+
 # ############
 # # Packages #
 # ############
