--- a/Modules/Modeling/Makefile
+++ b/Modules/Modeling/Makefile
@@ -3,14 +3,16 @@ include ../../make.inc
 WaveEq=AC
 # WaveEq=AC_VTI
 # WaveEq=PSV
-Solver=FDSG_O4
+Solver=FDSG
+Order=O4
 
 src = \
 m_model.f90 \
 m_shotlist.f90 m_shot.f90 \
 m_computebox.f90 \
-# m_field.f90 \
-# m_propagator_$(WaveEq)_$(Solver).f90
+m_field.f90 \
+m_cpml_$(Solver).f90 \
+m_propagator_$(WaveEq)_$(Solver)_$(Order).f90
 
 
 all : $(src:.f90=.o)
