--- a/Modules/Kernel/Makefile
+++ b/Modules/Kernel/Makefile
@@ -4,17 +4,16 @@ Param=velocities-density
 #Param=velocities-impedance
 #Param=slowness-density
 
-Approach=FWI
-
 src = \
+m_weighter.f90 \
 m_fobjective.f90 \
-m_gradient_modeling_$(Approach).f90 \
-m_parameterization_$(Param).f90 \
-m_weighter_polygon.f90 \
-m_weighter_table.f90
+m_nabla_FWI.f90 \
+m_parameterization_$(Param).f90
+# m_separator.f90 \
+# m_nabla_RWI.f90 \
 
 all : $(src:.f90=.o)
 
 clean :
 	-rm $(src:.f90=.o) 
-	-rm $(src:%.f90=../../mod/%.mod)
+	-rm $(src:%.f90=../../mod/%.mod) ../../mod/m_parameterization.mod
