--- a/Modules/Optimization/Makefile
+++ b/Modules/Optimization/Makefile
@@ -1,13 +1,12 @@
 include ../../make.inc
 
-Preco=zpower
 #Preco=scaling
 LineS=Wolfe
-#Optim=NLCG
-Optim=LBFGS
+Optim=NLCG
+#Optim=LBFGS
 
 src = \
-m_preconditioner_$(Preco).f90 \
+m_preconditioner.f90 \
 m_linesearcher_$(LineS).f90 \
 m_optimizer_$(Optim).f90 \
 
@@ -15,4 +14,4 @@ all : $(src:.f90=.o)
 
 clean :
 	-rm $(src:.f90=.o) 
-	-rm $(src:%.f90=../../mod/%.mod)
+	-rm $(src:%.f90=../../mod/%.mod)  ../../mod/m_linesearcher.mod ../../mod/m_optimizer.mod
