--- a/Modules/Kernel/Makefile
+++ b/Modules/Kernel/Makefile
@@ -1,19 +1,35 @@
+mod_dir=../../mod/
 include ../../make.inc
+
 
 Param=velocities-density
 #Param=velocities-impedance
 #Param=slowness-density
+APP=FWI
 
-src = \
-m_weighter.f90 \
-m_fobjective.f90 \
-m_nabla_FWI.f90 \
-m_parameterization_$(Param).f90
-# m_separator.f90 \
-# m_nabla_RWI.f90 \
+ifeq '$(APP)' 'RTM'
+	src = 
+endif
+
+ifeq '$(APP)' 'FWI'
+	src = \
+		m_weighter.f90 \
+		m_fobjective.f90 \
+		m_nabla_$(APP).f90 \
+		m_parametrizer_$(Param).f90
+endif
+
+ifeq '$(APP)' 'RWI'
+	src = \
+		m_weighter.f90 \
+		m_separator.f90 \
+		m_fobjective.f90 \
+		m_nabla_$(APP).f90 \
+		m_parametrizer_$(Param).f90
+endif
 
 all : $(src:.f90=.o)
 
 clean :
 	-rm $(src:.f90=.o) 
-	-rm $(src:%.f90=../../mod/%.mod) ../../mod/m_parameterization.mod
+	-rm $(src:%.f90=$(mod_dir)%.mod) $(mod_dir)m_nabla.mod $(mod_dir)m_parametrizer.mod
