--- a/Modules/System/Makefile
+++ b/Modules/System/Makefile
@@ -1,17 +1,17 @@
 mod_dir=../../mod/
 include ../../make.inc
+include ../../setup.inc
 
 
 src = \
-m_global.f90 \
 m_string.f90 \
-m_mpienv.f90 \
+m_either.f90 \
 m_message.f90 \
-m_setup.f90 \
 m_arrayop.f90 \
+m_setup.f90 \
 m_format_su.f90
 
-all : $(src:.f90=.o)
+all : $(src:.f90=.o) m_mpienv.o
 
 clean :
 	-rm $(src:.f90=.o) 
