go back to compilations with preprocessors enabled, as .F90/.f90 is difficult to differentiate in Makefile; more use of either functions to handle optional arguments with defaults

--- a/Modules/System/Makefile
+++ b/Modules/System/Makefile
@@ -6,13 +6,14 @@ include ../../setup.inc
 src = \
 m_string.f90 \
 m_either.f90 \
+m_mpienv.f90 \
 m_message.f90 \
 m_arrayop.f90 \
 m_setup.f90 \
 m_format_su.f90
 
-all : $(src:.f90=.o) m_mpienv.o
+all : $(src:.f90=.o)
 
 clean :
 	-rm $(src:.f90=.o) 
-	-rm $(src:%.f90=$(mod_dir)%.mod)
+	-rm $(src:.f90=$(mod_dir).mod)
