make use of m_either in m_setup.f90; add m_sysio for file IO

--- a/Modules/System/Makefile
+++ b/Modules/System/Makefile
@@ -4,12 +4,13 @@ include ../../setup.inc
 
 
 src = \
-m_string.f90 \
 m_either.f90 \
+m_string.f90 \
 m_mpienv.f90 \
 m_message.f90 \
 m_arrayop.f90 \
 m_setup.f90 \
+m_sysio.f90 \
 m_format_su.f90
 
 all : $(src:.f90=.o)
