--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 #####################################
 # Don't track these files & folders #
 #####################################
+Doc/
 Demo/
 devel/
 exe/
