--- a/Modules/Modeling/Makefile
+++ b/Modules/Modeling/Makefile
@@ -5,7 +5,8 @@ include ../../setup.inc
 
 src = \
 m_model.f90 \
-m_shotlist.f90 m_shot.f90 \
+m_shotlist_$(Batch).f90 \
+m_shot.f90 \
 m_computebox.f90 \
 m_field.f90 \
 m_cpml_$(Solver).f90 \
@@ -16,4 +17,4 @@ all : $(src:.f90=.o)
 
 clean :
 	-rm $(src:.f90=.o) 
-	-rm $(src:%.f90=$(mod_dir)%.mod) $(mod_dir)m_cpml.mod $(mod_dir)m_propagator.mod
+	-rm $(src:%.f90=$(mod_dir)%.mod) $(mod_dir)m_shotlist.mod $(mod_dir)m_cpml.mod $(mod_dir)m_propagator.mod
