--- a/Modules/Signal/Makefile
+++ b/Modules/Signal/Makefile
@@ -7,7 +7,7 @@ src = \
 m_hicks.f90 \
 m_butterworth.f90 \
 m_resampler.f90 \
-m_wavelets.f90 \
+m_wavelet.f90 \
 m_matchfilter.f90 \
 m_smoother_laplacian_sparse.f90
 
