--- a/Modules/System/Makefile
+++ b/Modules/System/Makefile
@@ -10,12 +10,12 @@ m_mpienv.f90 \
 m_message.f90 \
 m_arrayop.f90 \
 m_setup.f90 \
-m_checkpoint.f90 \
 m_sysio.f90 \
-m_format_su.f90
+m_checkpoint.f90 \
+m_suformat.f90
 
 all : $(src:.f90=.o)
 
 clean :
 	-rm $(src:.f90=.o) 
-	-rm $(src:.f90=$(mod_dir).mod)
+	-rm $(src:%.f90=$(mod_dir)%.mod)
