--- a/Modules/Optimization/Makefile
+++ b/Modules/Optimization/Makefile
@@ -4,9 +4,9 @@ include ../../setup.inc
 
 
 src = \
-m_preconditioner.f90 \
 m_linesearcher_$(LineS).f90 \
 m_optimizer_$(Optim).f90 \
+m_Optimization.f90
 
 all : $(src:.f90=.o)
 
