--- a/Modules/System/Makefile
+++ b/Modules/System/Makefile
@@ -12,7 +12,8 @@ m_arrayop.f90 \
 m_setup.f90 \
 m_sysio.f90 \
 m_checkpoint.f90 \
-m_suformat.f90
+m_suformat.f90 \
+m_System.f90
 
 all : $(src:.f90=.o)
 
