--- a/FWI/Makefile
+++ b/FWI/Makefile
@@ -3,6 +3,17 @@ include ../make.inc
 include ../setup.inc
 
 
+obj = \
+../Modules/System/*.o \
+../Modules/Etc/*.o \
+../Modules/Signal/*.o \
+../Modules/Modeling/*.o \
+../Modules/Kernel/*.o \
+../Modules/Optimization/*.o
+
+
+all : mod exe
+
 mod :
 	#System
 	(cd ../Modules/System; make)
@@ -18,8 +29,8 @@ mod :
 	(cd ../Modules/Optimization; make)
 
 exe : main.o
-	mpif90 $(FLAGF90) $^ $(MOD) -o ../exe/$(app)_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
-	(cd ../exe; ln -sf $(app)_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim) $(APP) )
+	mpif90 $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/fwi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
+	(cd ../exe; ln -sf fwi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim) FWI )
 
 clean :
 	-rm main.o
@@ -33,5 +44,9 @@ cleanall :
 	(cd ../Modules/Signal; make clean)
 	#Modeling
 	(cd ../Modules/Modeling; make clean)
-	#FWD
+	#Kernel
+	(cd ../Modules/Kernel; make clean)
+	#Optimization
+	(cd ../Modules/Optimization; make clean)
+	#FWI
 	make clean
