--- a/Modules/Modeling/Makefile
+++ b/Modules/Modeling/Makefile
@@ -10,7 +10,8 @@ m_shot.f90 \
 m_computebox.f90 \
 m_field.f90 \
 m_cpml_$(Solver).f90 \
-m_propagator_$(WaveEq)_$(Solver)_$(Order).f90
+m_propagator_$(WaveEq)_$(Solver)_$(Order).f90 \
+m_Modeling.f90
 
 
 all : $(src:.f90=.o)
