update; grho looks problematic

--- a/Modules/Kernel/Makefile
+++ b/Modules/Kernel/Makefile
@@ -8,11 +8,11 @@ ifeq '$(APP)' 'RTM'
 endif
 
 src = \
-	m_weighter.f90 \
 	m_parametrizer_$(Param).f90 \
-	m_fobjective.f90 \
+	m_querypoint.f90 \
+	m_weighter.f90 \
 	m_preconditioner.f90 \
-	m_nabla.f90 \
+	m_fobjective.f90 \
 	m_Kernel.f90
 
 ifeq '$(APP)' 'FWI'
