--- a/Demo_future/11_DotProduct/setup.in
+++ b/Demo_future/11_DotProduct/setup.in
@@ -14,11 +14,6 @@ NR                      100
 WAVELET_TYPE            ricker
 T0                       0.5
 
-                       # fsz   fsx  fsy  lsz   lsx    lsy  ns
-#SOURCE_LINE             '26    505  500  20    505    500  1'
-                       # frz   frx  fry  lrz   lrx    lry  nr
-#RECEIVER_LINE           '26    10    0   26    1990   0    100'
-
 SCOMP                   p
 RCOMP                   vz #'p vz'
 
@@ -36,5 +31,4 @@ FPEAK        7
 
 IF_USE_CHECKPOINT   F
 
-
-#why the vz comp of dsyn is weird?
+DIR_OUT			'./'
