update before debugging m_checkpoint.f90

--- a/Modules/Etc/Makefile
+++ b/Modules/Etc/Makefile
@@ -1,6 +1,6 @@
 mod_dir=../../mod/
-include ../../make.inc
-include ../../setup.inc
+include ../../compiler.inc
+include ../../modules.inc
 
 
 srcf77 = \
@@ -10,8 +10,12 @@ srcf90 = \
 m_math.f90 \
 singleton.f90
 
+
 all : $(srcf77:.f=.o) $(srcf90:.f90=.o)
+	@printf "\n"
 
 clean :
 	-rm $(srcf77:.f=.o) $(srcf90:.f90=.o)
+	@printf "\n"
 	-rm $(srcf90:%.f90=$(mod_dir)%.mod)
+	@printf "\n"
