--- a/Modules/Modeling/Makefile
+++ b/Modules/Modeling/Makefile
@@ -1,6 +1,6 @@
 mod_dir=../../mod/
-include ../../make.inc
-include ../../setup.inc
+include ../../compiler.inc
+include ../../modules.inc
 
 
 src = \
@@ -15,7 +15,10 @@ m_Modeling.f90
 
 
 all : $(src:.f90=.o)
+	@printf "\n"
 
 clean :
 	-rm $(src:.f90=.o) 
+	@printf "\n"
 	-rm $(src:%.f90=$(mod_dir)%.mod) $(mod_dir)m_shotlist.mod $(mod_dir)m_cpml.mod $(mod_dir)m_propagator.mod $(mod_dir)m_modeling.mod
+	@printf "\n"
