--- a/Demo_future/11_DotProduct/setup_simple.in
+++ b/Demo_future/11_DotProduct/setup_simple.in
@@ -12,20 +12,21 @@ DR                      '0  20 0'
 NR                      100
 
 SCOMP                   p
-RCOMP                   vz 'p vz'
+RCOMP                   vz #'p vz'
 
 #WAVELET_TYPE            ricker                                                              
 #T0                      0.5                                                                 
 FILE_WAVELET            'fricker_dt6000.su' 
 
-IF_BLOOM        F
-IF_HICKS        F
+#IF_BLOOM        F
+#IF_HICKS        F
 
 IF_USE_RANDOM   F
 
 NT           500
 DT           0.006
 FPEAK        7
+RDT			0.006
 
 #SNAPSHOT     'p vz'
 #NSNAPSHOT    50
