--- a/FWI/Makefile
+++ b/FWI/Makefile
@@ -44,7 +44,7 @@ mod :
 	(cd ../Modules/Optimization; make App=FWI)
 
 exe : main.o
-	mpif90 $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/fwi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
+	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/fwi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
 	(cd ../exe; ln -sf fwi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim) FWI )
 
 clean :
