--- a/WPI/Makefile
+++ b/WPI/Makefile
@@ -45,7 +45,7 @@ mod :
 	(cd ../Modules/Optimization; make App=WPI)
 
 exe : main.o
-	mpif90 $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/wpi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
+	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/wpi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
 	(cd ../exe; ln -sf wpi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim) WPI )
 
 clean :
