--- a/Demo_future/04_GradientTest/setup.in
+++ b/Demo_future/04_GradientTest/setup.in
@@ -38,6 +38,7 @@ SMOOTHING     'none'
 DESCENT_DIR     'random'  #'-curr%pg'
 #ALPHAS          '1e-3 1e-2 1e-1 1 1e1'
 ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
+#ALPHAS          '0.'
 #ALPHAS          '-1e-3 -1e-2 -1e-1 -1 -1e1'
 #ALPHAS          '1 1e1 1e2 1e3 1e4'
 #ALPHAS          '0.125 0.25 0.5 1. 2. 4. 8.'
