--- a/Demo_future/04_GradientTest_WPI/setup.in
+++ b/Demo_future/04_GradientTest_WPI/setup.in
@@ -12,8 +12,10 @@ FR                      '40 10  0'
 DR                      '0  20 0'
 NR                      100
 
+IF_HICKS    F
+
 SCOMP                   p
-RCOMP                   vz #'p vz'
+RCOMP                   p #'p vz'
 
 
 NT           500
@@ -31,13 +33,15 @@ PARAMETER           'vp:1000:2000'
 
 #CORR          'RE'
 SMOOTHING     'none'
-#PRECO        'z^0'
+PRECO        'z^0'
 
 DNORMALIZERS    '1 1'
 MREF            '1 1'
 
-DESCENT_DIR     'random'  #'-curr%pg'
-ALPHAS          '1e-3 1e-2 1e-1 1 1e1'
+#DESCENT_DIR     'random'  #'-curr%pg'
+ALPHAS          '0'
+#ALPHAS          '1e-10 1e-8 1e-6 1e-4'
+#ALPHAS          '1e-3 1e-2 1e-1 1 1e1'
 #ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
 #ALPHAS          '-1e-3 -1e-2 -1e-1 -1 -1e1'
 #ALPHAS          '1 1e1 1e2 1e3 1e4'
