--- a/Demo_future/04_GradientTest/setup.in
+++ b/Demo_future/04_GradientTest/setup.in
@@ -30,14 +30,14 @@ RDT			0
 PARAMETER           'vp:1000:2000'
 
 SMOOTHING     'none'
-#PRECO        'z^0'
+PRECO         'z^0'
 
 #DNORMALIZERS    '1 1'
 #MREF            '1 1'
 
 DESCENT_DIR     'random'  #'-curr%pg'
-#ALPHAS          '1e-3 1e-2 1e-1 1 1e1'
-ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
+ALPHAS          '1e-3 1e-2 1e-1 1 1e1'
+#ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
 #ALPHAS          '0.'
 #ALPHAS          '-1e-3 -1e-2 -1e-1 -1 -1e1'
 #ALPHAS          '1 1e1 1e2 1e3 1e4'
