--- a/Demo_future/04_GradientTest_WPI/setup.in
+++ b/Demo_future/04_GradientTest_WPI/setup.in
@@ -12,16 +12,16 @@ FR                      '40 10  0'
 DR                      '0  20 0'
 NR                      100
 
-IF_HICKS    F
+#IF_HICKS    F
 
 SCOMP                   p
-RCOMP                   p #'p vz'
+RCOMP                   p
 
 
 NT           500
 DT           0.006
 
-## for FWI ##
+## for WPI ##
 FILE_DATA_PREFIX    './results_fwd/dsyn_'
 WEIGHTING           'none'
 
@@ -31,7 +31,7 @@ RDT			0
 
 PARAMETER           'vp:1000:2000'
 
-#CORR          'RE'
+#CORRS          'FWI'
 SMOOTHING     'none'
 PRECO        'z^0'
 
@@ -39,15 +39,17 @@ DNORMALIZERS    '1 1'
 MREF            '1 1'
 
 #DESCENT_DIR     'random'  #'-curr%pg'
-ALPHAS          '0'
-#ALPHAS          '1e-10 1e-8 1e-6 1e-4'
+ALPHAS          '1e6 1e7 1e8'
+#ALPHAS          '1e-5 1e-3 1e-1 1'
 #ALPHAS          '1e-3 1e-2 1e-1 1 1e1'
 #ALPHAS          '1e-3 5e-3 1e-2 5e-2 1e-1 5e-1 1'
+#ALPHAS          '0.'
 #ALPHAS          '-1e-3 -1e-2 -1e-1 -1 -1e1'
 #ALPHAS          '1 1e1 1e2 1e3 1e4'
 #ALPHAS          '0.125 0.25 0.5 1. 2. 4. 8.'
 
-#LS_SCALING  'none'
+
+LS_SCALING  'none'
 
 
 #SNAPSHOT     'p vz'
