modif:m_Lpnorm.f90:add stack option for adjsrc procedures; add:m_image_weighter.f90:weight image by topo file; m_querypoint.f90:user's priority to flip qp's sign

--- a/Demo_future/04_GradientTest_WPI/setup.in
+++ b/Demo_future/04_GradientTest_WPI/setup.in
@@ -8,8 +8,6 @@ IS_FREESURFACE          F
 
 ACQUI_GEOMETRY          spread
 FS                      '50 505 500'
-DS                      '0  20 0'
-NS                      4
 FR                      '40 10  0'
 DR                      '0  20 0'
 NR                      100
@@ -37,7 +35,7 @@ RDT			0
 PARAMETER           'vp:1000:2000'
 #PARAMETER           'vp:0:1'
 
-#CORRS          'RE'
+#CORRS          'DR'
 SMOOTHING     'none'
 PRECO        'z^0'
 
