separate two modeling_gradient subroutines from main.f90 into another file, to be called in Demos

--- a/WPI/Makefile
+++ b/WPI/Makefile
@@ -44,7 +44,7 @@ mod :
 	#Optimization
 	(cd ../Modules/Optimization; make App=WPI)
 
-exe : main.o
+exe : sub_modeling_gradient.o main.o
 	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../exe/wpi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim)
 	(cd ../exe; ln -sf wpi_$(WaveEq)_$(Solver)_$(Order)_$(LineS)_$(Optim) WPI )
 
