modif:04_GradientTest:separate (internal) optimizer_init_loop subroutine from main.f90 into another file, to be called from other Demos (eg. 04_GradientTest_WPI).  Update demos according to m_propagator*.f90, WPI/main.f90 etc.

--- a/Demo_future/04_GradientTest/Makefile
+++ b/Demo_future/04_GradientTest/Makefile
@@ -43,7 +43,7 @@ mod :
 	(cd ../../Modules/Optimization; make m_linesearcher_$(LineS).o)
 
 
-exe : main.o
+exe : main.o sub_optimizer_init_loop.o
 	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../../exe/1stWolfe_$(WaveEq)_$(Solver)_$(Order)
 	(cd ../../exe; ln -sf 1stWolfe_$(WaveEq)_$(Solver)_$(Order) 1stWolfe )
 
