--- a/Demo_future/04_GradientTest/setup.in
+++ b/Demo_future/04_GradientTest/setup.in
@@ -1,5 +1,5 @@
-MODEL_SIZE              '201 201 1'
-MODEL_SPACING           '10 10 1'
+MODEL_SIZE              '101 101 1'
+MODEL_SPACING           '20 20 1'
 FILE_MODEL              'model'
 MODEL_ATTRIBUTES        vp #'vp rho'
 FILE_TOPO               'topo'
@@ -30,10 +30,12 @@ RDT			0
 PARAMETER           'vp:1000:2000'
 
 SMOOTHING     'none'
-PRECO         'z^0'
+#PRECO         'z^0'
 
-DNORMALIZERS    '1 1'
-MREF            '1 1'
+JOB             gradient
+
+#DNORMALIZERS    '1 1'
+#MREF            '1 1'
 
 #DESCENT_DIR     'random'  #'-curr%pg'
 ALPHAS          '1e-5 1e-3 1e-1 1'
