--- a/Demo_future/04_GradientTest_WPI/setup.in
+++ b/Demo_future/04_GradientTest_WPI/setup.in
@@ -1,5 +1,5 @@
-MODEL_SIZE              '101 101 1'
-MODEL_SPACING           '20 20 1'
+MODEL_SIZE              '201 201 1'
+MODEL_SPACING           '10 10 1'
 FILE_MODEL              'model'
 MODEL_ATTRIBUTES        vp #'vp rho'
 FILE_TOPO               'topo'
@@ -33,20 +33,22 @@ UPDATE_WAVELET		'no'
 RDT			0
 
 PARAMETER           'vp:1000:2000'
-#PARAMETER           'vp:0:1'
 
-#CORRS          'DR'
+IF_QP_SET_SIGN      F
+
+#CORRS          'RE'
 SMOOTHING     'none'
 PRECO        'z^0'
 
-DNORMALIZERS    '1 1'
-MREF            '1 1'
+#JOB             gradient
+
+#DNORMALIZERS    '1 1'
+#MREF            '1 1'
 
 #DESCENT_DIR     'random'  #'-curr%pg'
 #DESCENT_DIR     'random_perturb'
-ALPHAS           1e-3
-#ALPHAS           '1e-5 1e-4 1e-3 1e-2'
-#ALPHAS           '1e-3 1e-2 1e-1 1 1e1'
+#ALPHAS           '1e-6 1e-5 1e-4 1e-3' #for n=101
+ALPHAS           '1e-3 1e-2 1e-1 1 1e1' #for n=201
 #ALPHAS          '0.'
 
 
