--- a/Demo_future/04_GradientTest_WPI/Makefile
+++ b/Demo_future/04_GradientTest_WPI/Makefile
@@ -44,7 +44,7 @@ mod :
 	(cd ../../Modules/Optimization; make m_linesearcher_$(LineS).o)
 
 
-exe : main.o ../04_GradientTest/sub_optimizer_init_loop.o #../../WPI/sub_modeling_gradient.o
+exe : main.o ../04_GradientTest/sub_optimizer_init_loop.o ../../WPI/sub_modeling_gradient.o
 	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../../exe/gradienttest_wpi_$(WaveEq)_$(Solver)_$(Order)
 	(cd ../../exe; ln -sf gradienttest_wpi_$(WaveEq)_$(Solver)_$(Order) gradienttest_wpi )
 
