--- a/Demo_future/04_GradientTest/Makefile
+++ b/Demo_future/04_GradientTest/Makefile
@@ -44,8 +44,8 @@ mod :
 
 
 exe : main.o sub_optimizer_init_loop.o
-	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../../exe/1stWolfe_$(WaveEq)_$(Solver)_$(Order)
-	(cd ../../exe; ln -sf 1stWolfe_$(WaveEq)_$(Solver)_$(Order) 1stWolfe )
+	$(F90) $(FLAGF90) $(MOD) $(obj) $^ -o ../../exe/gradienttest_$(WaveEq)_$(Solver)_$(Order)
+	(cd ../../exe; ln -sf gradienttest_$(WaveEq)_$(Solver)_$(Order) GradientTest )
 
 clean :
 	-rm main.o
