--- a/Demo_future/04_GradientTest_WPI[poor_eg]/setup.in
+++ b/Demo_future/04_GradientTest_WPI[poor_eg]/setup.in
@@ -47,8 +47,8 @@ PRECO        'z^0'
 
 #DESCENT_DIR     'random'  #'-curr%pg'
 #DESCENT_DIR     'random_perturb'
-#ALPHAS           '1e-6 1e-5 1e-4 1e-3' #for n=101
-ALPHAS           '1e-3 1e-2 1e-1 1 1e1' #for n=201
+#ALPHAS           '1e-6 1e-5 1e-4 1e-3' #better for n=101
+ALPHAS           '1e-3 1e-2 1e-1 1 1e1' #better for n=201
 #ALPHAS          '0.'
 
 
