--- a/Demo_future/04_GradientTest/setup.in
+++ b/Demo_future/04_GradientTest/setup.in
@@ -32,7 +32,7 @@ PARAMETER           'vp:1000:2000'
 SMOOTHING     'none'
 #PRECO         'z^0'
 
-JOB             gradient
+#JOB             gradient
 
 #DNORMALIZERS    '1 1'
 #MREF            '1 1'
